# spendee-to-nw-tracker

./: .gitignore  README.md  pyproject.toml
src/snwt/: main.py
