[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snwt"
version = "0.0.1"
authors = [{ name = "Giovanni Gobbi", email = "gobbees@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["pandas", "pandas-stubs", "argparse"]

[project.scripts]
snwt = "snwt:main"
